Fixed text-overflow & add hover effects

--- a/popup/src/App.css
+++ b/popup/src/App.css
@@ -1,38 +1,36 @@
-.App {
+.fill-btn {
+  border-radius: 4px;
+  background-color: #496BE1;
+  border: none;
+  color: #FFFFFF;
   text-align: center;
+  font-size: 20px;
+  width: 70px;
+  transition: all 0.5s;
+  cursor: pointer;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.fill-btn .fill-btn-txt {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.fill-btn .fill-btn-txt:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.fill-btn:hover .fill-btn-txt {
+  padding-right: 25px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.fill-btn:hover .fill-btn-txt:after {
+  opacity: 1;
+  right: 0;
 }
